--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
+# backports.zoneinfo==0.2.1
 Django==4.1.2
 djangorestframework==3.14.0
 easy-thumbnails==2.8.3
