--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
+dj-database-url==1.0.0
 Django==4.1.2
 django-cors-headers==3.13.0
+django-heroku==0.3.1
 djangorestframework==3.14.0
 easy-thumbnails==2.8.3
 gunicorn==20.1.0
